Fixing some problems on Safari

--- a/src/assets/scss/components/intro.scss
+++ b/src/assets/scss/components/intro.scss
@@ -17,6 +17,10 @@
     background: var(--container-background-color);
   }
 
+  &__wrapper {
+  display: grid;
+  }
+
   &__content {
     display: flex;
     align-items: center;
@@ -32,7 +36,7 @@
     font-size: 2.5rem;
     line-height: 1.258;
     justify-content: flex-start;
-    display: flex;
+    display: inline-block;
     color: var(--main-color);
     background: linear-gradient(to top right, var(--main-color) 0, var(--main-color--gradient));
     background-clip: text;
@@ -56,6 +60,7 @@
   &__target {
     width: 100%;
     $self: &;
+    display: block;
 
     &.open {
       #{ $self }__content {
