--- a/src/assets/scss/components/skills.scss
+++ b/src/assets/scss/components/skills.scss
@@ -39,6 +39,7 @@
       svg {
         max-width: 100px;
         padding: 0.5em;
+        width: 100%;
       }
     }
 
