--- a/src/assets/scss/components/webring.scss
+++ b/src/assets/scss/components/webring.scss
@@ -44,7 +44,7 @@
     position: absolute;
     transform: translate(0, -85%);
     width: 24px;
-    z-index: -1;
+    z-index: 0;
 
   }
 
