--- a/src/components/Global/CurrentlyPlaying/CurrentlyPlaying.scss
+++ b/src/components/Global/CurrentlyPlaying/CurrentlyPlaying.scss
@@ -240,6 +240,7 @@
 
       img {
         pointer-events: none;
+        border-radius: 50%;
       }
 
       &.gatsby-image-wrapper--desktop {
